Update to 29 & include gradle wrapper