@@ -1,26 +1,66 @@
 FROM openjdk:8-jdk
-MAINTAINER William Chong <williamchong@lakoo.com>
 
-RUN mkdir -p /opt/android-sdk-linux && mkdir -p ~/.android && touch ~/.android/repositories.cfg
-WORKDIR /opt
+ARG ANDROID_COMPILE_SDK=29
+ARG ANDROID_BUILD_TOOLS=29.0.3
+ARG ANDROID_SDK_TOOLS=4333796
+RUN apt-get --quiet update --yes
+RUN apt-get --quiet install --yes wget tar unzip lib32stdc++6 lib32z1
+RUN wget --quiet --output-document=android-sdk.zip https://dl.google.com/android/repository/sdk-tools-linux-${ANDROID_SDK_TOOLS}.zip
+RUN unzip -qq -d android-sdk-linux android-sdk.zip
+RUN echo y | android-sdk-linux/tools/bin/sdkmanager "platforms;android-${ANDROID_COMPILE_SDK}" >/dev/null
+RUN echo y | android-sdk-linux/tools/bin/sdkmanager "platform-tools" >/dev/null
+RUN echo y | android-sdk-linux/tools/bin/sdkmanager "build-tools;${ANDROID_BUILD_TOOLS}" >/dev/null
+RUN export ANDROID_HOME=$PWD/android-sdk-linux && export PATH=$PATH:$PWD/android-sdk-linux/platform-tools/
+ENV ANDROID_HOME /android-sdk-linux
+ENV PATH $PATH:/android-sdk-linux/platform-tools
+RUN yes | android-sdk-linux/tools/bin/sdkmanager --licenses > /dev/null
 
-ENV ANDROID_HOME /opt/android-sdk-linux
-ENV PATH ${PATH}:${ANDROID_HOME}/tools/bin:${ANDROID_HOME}/platform-tools:${PATH}:${ANDROID_HOME}/tools
-ENV ANDROID_NDK /opt/android-ndk-linux
-ENV ANDROID_NDK_HOME /opt/android-ndk-linux
-# ENV SDKMANAGER_OPTS "--add-modules java.se.ee"
+CMD ["gradle"]
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-	unzip \
-	wget
-RUN cd /opt/android-sdk-linux && \
-	wget -q --output-document=sdk-tools.zip https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip && \
-	unzip sdk-tools.zip && \
-	rm -f sdk-tools.zip && \
-	echo y | sdkmanager "build-tools;28.0.3" "platforms;android-28" "platforms;android-26" && \
-	echo y | sdkmanager "extras;android;m2repository" "extras;google;m2repository" "extras;google;google_play_services" && \
-	sdkmanager "cmake;3.6.4111459"
-RUN wget -q --output-document=android-ndk.zip https://dl.google.com/android/repository/android-ndk-r18b-linux-x86_64.zip && \
-	unzip android-ndk.zip && \
-	rm -f android-ndk.zip && \
-	mv android-ndk-r18b android-ndk-linux
+ENV GRADLE_HOME /opt/gradle
+
+RUN set -o errexit -o nounset \
+    && echo "Adding gradle user and group" \
+    && groupadd --system --gid 1000 gradle \
+    && useradd --system --gid gradle --uid 1000 --shell /bin/bash --create-home gradle \
+    && mkdir /home/gradle/.gradle \
+    && chown --recursive gradle:gradle /home/gradle \
+    \
+    && echo "Symlinking root Gradle cache to gradle Gradle cache" \
+    && ln -s /home/gradle/.gradle /root/.gradle
+
+VOLUME /home/gradle/.gradle
+
+WORKDIR /home/gradle
+
+RUN apt-get update \
+    && apt-get install --yes --no-install-recommends \
+        fontconfig \
+        unzip \
+        wget \
+        \
+        bzr \
+        git \
+        git-lfs \
+        mercurial \
+        openssh-client \
+        subversion \
+    && rm -rf /var/lib/apt/lists/*
+
+ENV GRADLE_VERSION 6.5.1
+ARG GRADLE_DOWNLOAD_SHA256=50a7d30529fa939721fe9268a0205142f3f2302bcac5fb45b27a3902e58db54a
+RUN set -o errexit -o nounset \
+    && echo "Downloading Gradle" \
+    && wget --no-verbose --output-document=gradle.zip "https://services.gradle.org/distributions/gradle-${GRADLE_VERSION}-bin.zip" \
+    \
+    && echo "Checking download hash" \
+    && echo "${GRADLE_DOWNLOAD_SHA256} *gradle.zip" | sha256sum --check - \
+    \
+    && echo "Installing Gradle" \
+    && unzip gradle.zip \
+    && rm gradle.zip \
+    && mv "gradle-${GRADLE_VERSION}" "${GRADLE_HOME}/" \
+    && ln --symbolic "${GRADLE_HOME}/bin/gradle" /usr/bin/gradle \
+    \
+    && echo "Testing Gradle installation" \
+    && gradle --version
